# sparkwright

./: .gitattributes  .gitignore  .kit-manifest  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT-PROCESS.md  DEVELOPMENT-STANDARDS.md  GLOSSARY.md  LICENSE  MAINTAINING.md  MATURITY.md  ONBOARDING.md  README.md  SECURITY.md  START-HERE.md  VERSION  WALKTHROUGH.md  fo.bar  foo
.claude/: README.md  mcp-policy.json  settings.json
.firecrawl/: search-hvac.json  search-node-vault.json  search-spring-vault.json  search-vaultrs.json  search-vaultsharp.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.kit/: budget.conf  model-map.conf  model-tiers.conf  roster.conf
adapters/: README.md
agents/: engineer.agent.md  orchestrator.agent.md  reviewer.agent.md  security.agent.md
conformance/: 15-factor-checklist.md  README.md  action-pinning.sh  actionlint-valid.sh  adopter-export-wired.sh  adopter-preflight-wired.sh  agent-autonomy.sh  agent-boundary.sh  agentic-ops-readiness.md  agentops-ready.sh  agentops-sensor-wired.sh  (+145 more)
profiles/python/scaffold/: .gitignore  README.md  pyproject.toml
profiles/python/scaffold/observability/: README.md
profiles/python/scaffold/scripts/: dr-drill.sh  smoke.sh
profiles/python/scaffold/src/app/: __init__.py  flags.py  health.py  live_provider.py  server.py  telemetry.py
profiles/python/scaffold/tests/: test_flags.py  test_health.py  test_telemetry.py
profiles/python/scaffold/tests/e2e/: test_journey.py
profiles/python/scaffold/tests/integration/: test_greeting.py
profiles/rust/scaffold/: Cargo.toml  README.md
profiles/rust/scaffold/observability/: README.md
profiles/rust/scaffold/scripts/: smoke.sh
profiles/rust/scaffold/src/: flags.rs  health.rs  lib.rs  live_provider.rs  main.rs  server.rs  telemetry.rs
profiles/rust/scaffold/tests/: e2e.rs  integration.rs
(+663 files in other folders)
