[project]
name = "app"
version = "0.1.0"
description = "Sparkwright python-profile starter scaffold."
requires-python = ">=3.11"
dependencies = []  # the app is stdlib-only; add real deps as the project grows

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

# Dev tooling — pinned to recent real releases. The CI pipeline runs
# `uv sync --frozen`, so these resolve from the committed uv.lock (see README).
[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "mypy==1.14.1",
    "ruff==0.9.2",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80   # enforce the 80% coverage floor the profile + Definition of Done require
